api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qr-api
  template:
    metadata:
      labels:
        app: qr-api
    spec:
      serviceAccountName: qr-code-sa
      containers:
      - name: qr-api
        image: duybo95/devops-qr-code-api:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: qr-api-service
spec:
  type: ClusterIP
  selector:
    app: qr-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
