frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qr-frontend
  template:
    metadata:
      labels:
        app: qr-frontend
    spec:
      containers:
        - name: qr-frontend
          image: duybo95/devops-qr-code-frontend:5
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: qr-frontend-service
spec:
  type: ClusterIP
  selector:
    app: qr-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
